--- a/views/form.ejs
+++ b/views/form.ejs
@@ -23,7 +23,7 @@
                     <p class="text text-normal">New user? <span><a href="error404" class="text text-links">Create an account</a></span>
                     </p>
                 </div>
-                <form method="post" action="/main" name="signin" class="form">
+                <form method="post" action="/LP/main" name="signin" class="form">
                     <div class="input-control">
                         <label for="email" class="input-label" hidden>Email Address</label>
                         <input type="email" name="email" id="email" class="input-field" placeholder="Email Address">
