--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,100 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet"> 
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Database</title>
+    <link rel="stylesheet" href="/main.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- navbar -->
-<nav class="navbar sticky-top bg-custom-navbar d-flex justify-content-between mb-3">
-    <div class="container-fluid">
-      <a class="navbar-brand mx-5 " href="#">SDMA Project</a>
-      <form method="get" action="#" class="d-flex" id="find" role="search">
-        <input id="searchIP" class="form-control me-2" name="search" type="search" placeholder="Search" aria-label="Search">
-        <a href="#" id="searchbtn" class="btn btn-outline-success">Search</a>
-      </form>
-    </div>
-  </nav>
-<!-- navbar -->
+    <nav
+      class="navbar sticky-top bg-custom-navbar d-flex justify-content-between mb-3"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand mx-5" href="#">SDMA Project</a>
+        <form method="get" action="#" class="d-flex" id="find" role="search">
+          <input
+            id="searchIP"
+            class="form-control me-2"
+            name="search"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <a href="#" id="searchbtn" class="btn btn-outline-success">Search</a>
+        </form>
+      </div>
+    </nav>
+    <!-- navbar -->
 
-<a href="/LP/main/create" class="btn btn-primary mx-5 px-5">Create</a>
+    <a href="/LP/main/create" class="btn btn-primary mx-5 px-5">Create</a>
 
-<div class="container-fluid mt-3">
-<tbody>
-        <table class="table table-md table-striped table-bordered table-primary table-hover">
-            <thead>
-              <tr>
-                <th scope="col">SR.no</th>
-                <th scope="col">Name</th>
-                <th scope="col">Rollno</th>
-                <th scope="col">Place</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-<% let id = 0 %>
-<%for(post of posts){%>
+    <div class="container-fluid mt-3">
+      <table
+        class="table table-md table-striped table-bordered table-primary table-hover"
+      >
+        <thead>
           <tr>
-            <th class="table-row" scope="row"><%= ++id%></th>
+            <th scope="col">SR.no</th>
+            <th scope="col">Name</th>
+            <th scope="col">Rollno</th>
+            <th scope="col">Place</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% let id = 0 %> <% for(post of posts){ %>
+          <tr>
+            <th class="table-row" scope="row"><%= ++id %></th>
             <td><%= post.name %></td>
             <td><%= post.rollno %></td>
             <td><%= post.place %></td>
-            <td><div class="btn-group ">
-              <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                Action
-              </button>
-              <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a class="dropdown-item update-btn" href="/LP/main/<%=post.id%>/update">Update</a></li>
-                <li><a class="dropdown-item show-btn" href="/LP/main/<%=post.id%>">Show</a></li>
-                <li>
-                    <form method="POST" action="/LP/main/<%=post.id%>?_method=DELETE" id="deleteForm">
-                        <input type="hidden" name="_method" value="DELETE">
-                        <button type="button" class="dropdown-item delete-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
+            <td>
+              <div class="btn-group">
+                <button
+                  type="button"
+                  class="btn btn-primary dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Action
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li>
+                    <a
+                      class="dropdown-item update-btn"
+                      href="/LP/main/<%=post.id%>/update"
+                      >Update</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item show-btn"
+                      href="/LP/main/<%=post.id%>"
+                      >Show</a
+                    >
+                  </li>
+                  <li>
+                    <form
+                      method="POST"
+                      action="/LP/main/<%=post.id%>?_method=DELETE"
+                      id="deleteForm<%=post.id%>"
+                    >
+                      <input type="hidden" name="_method" value="DELETE" />
+                      <button
+                        type="button"
+                        class="dropdown-item delete-btn"
+                        data-bs-toggle="modal"
+                        data-bs-target="#deleteModal<%=post.id%>"
+                      >
+                        Delete
+                      </button>
                     </form>
-                </li>
-            </ul>
-            <!-- Delete Confirmation Modal -->
-            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="deleteModalLabel">Delete Confirmation</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Are you sure you want to delete this item⁉️
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-danger" onclick="document.getElementById('deleteForm').submit()">Delete</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-               
-            </div>
+                  </li>
+                </ul>
+              </div>
             </td>
           </tr>
-          <tr>
-           
-    <%}%>
-  </div>
-  <!-- <a href="#" class="btn btn-success mx-2">Update</a>
-  <a href="#" class="btn btn-danger mx-2">Delete</a>
-  <a href="#" class="btn btn-warning">Show</a> -->
-    <!-- TAGS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+          <!-- Delete Confirmation Modal -->
+          <div
+            class="modal fade"
+            id="deleteModal<%=post.id%>"
+            tabindex="-1"
+            aria-labelledby="deleteModalLabel<%=post.id%>"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="deleteModalLabel<%=post.id%>">
+                    Delete Confirmation
+                  </h5>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  Are you sure you want to delete this item⁉️
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                  >
+                    Cancel
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    onclick="document.getElementById('deleteForm<%=post.id%>').submit()"
+                  >
+                    Delete
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <% } %>
+        </tbody>
+      </table>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script src="/main.js"></script>
-</body>
+  </body>
 </html>
