updated express routes

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -39,7 +39,7 @@
             <h1 class="text-dark text-center mx-auto mb-5">
               Add New Students 🚀
             </h1>
-            <form method="post" action="/LP/main/create">
+            <form method="post" action="/main/create">
               <div class="form-group mb-3">
                 <label for="name" class="text-dark">👨Name</label>
                 <input
