--- a/views/landpg.ejs
+++ b/views/landpg.ejs
@@ -20,15 +20,15 @@
 <nav class="navbar sticky-top bg-custom-navbar d-flex justify-content-between">
     <div class="container-fluid">
       <a class="navbar-brand mx-5 " href="#">SDMA Project</a>
-      <a href="/LP/form" class="btn btn-warning btn-md"><span class="me-2" aria-hidden="true">&#128100;</span>Subscribe</a>
+      <a href="/form" class="btn btn-warning btn-md"><span class="me-2" aria-hidden="true">&#128100;</span>Subscribe</a>
     </div>
   </nav>
 <!-- navbar -->
 <div class="container-sm my-custom-m-p text-center">
     <h1>🚀Fast paced way to manage your database</h1>
     <h2 class="opacity mb-5">Manage analytics like a boss</h2>
-    <a href="/LP/form" class="button btn btn-lg" id="button1">Login</a>
-<a href="/LP/form" class="btn btn-md btn-outline-primary rounded-pill " id="button2">Sign Up</a><br>
+    <a href="/form" class="button btn btn-lg" id="button1">Login</a>
+<a href="/form" class="btn btn-md btn-outline-primary rounded-pill " id="button2">Sign Up</a><br>
 <!-- image -->
 <img src="https://i.ibb.co/1Lv5NmT/image3015.png" alt="laptop" class="img-fluid mt-5">
 </div>
