--- a/views/update.ejs
+++ b/views/update.ejs
@@ -37,7 +37,7 @@
         <div class="col-md-6">
           <div class="form-container">
             <h1 class="text-dark text-center mx-auto mb-5">Update🧑‍🔬</h1>
-            <form method="post" action="/LP/main/<%= post.id %>?_method=PATCH">
+            <form method="post" action="/main/<%= post.id %>?_method=PATCH">
               <div class="form-group mb-3">
                 <label for="name" class="text-dark">👨 Name</label>
                 <input
