--- a/views/error404.ejs
+++ b/views/error404.ejs
@@ -10,7 +10,7 @@
     <div class="section">
       <h1 class="error">404</h1>
       <div class="page">Ooops!!! The page you are looking for is not found</div>
-      <a class="back-home" href="/LP">Back to home</a>
+      <a class="back-home" href="/">Back to home</a>
     </div>
   </body>
 </html>
