basic route changes

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -52,7 +52,9 @@
       </div>
     </nav>
     <!-- navbar -->
-
+    <br />
+    <h1>hello user: <%=name%></h1>
+    <br />
     <a href="/main/create" class="btn btn-primary mx-5 px-5">Create</a>
 
     <div class="container-fluid mt-3">
