--- a/views/details.ejs
+++ b/views/details.ejs
@@ -56,7 +56,7 @@
       <div class="card custom-card">
         <div class="d-flex justify-content-center">
           <img
-            src="https://pbs.twimg.com/profile_images/1765436713537798144/La5aO5Vo_400x400.jpg"
+            src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png"
             class=""
             alt="Profile Picture"
           />
