--- a/views/landpg.ejs
+++ b/views/landpg.ejs
@@ -131,7 +131,7 @@
         <div class="row">
           <div class="col-lg-4">
             <img class="rounded-circle shadow-1-strong mb-4"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(1).webp" alt="avatar"
+              src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Ojas Bhalerao</h5>
             <p>UX Designer</p>
@@ -144,7 +144,7 @@
 
           <div class="col-lg-4 d-none d-lg-block">
             <img class="rounded-circle shadow-1-strong mb-4"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar"
+              src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Srushti Nalawade</h5>
             <p>Web Developer</p>
@@ -157,10 +157,10 @@
 
           <div class="col-lg-4 d-none d-lg-block">
             <img class="rounded-circle shadow-1-strong mb-4"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp" alt="avatar"
+              src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Mohit Warke</h5>
-            <p>Photographer</p>
+            <p>Web Developer</p>
             <p class="text-muted">
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               praesentium voluptatum deleniti atque corrupti.
@@ -169,10 +169,10 @@
           </div>
           <div class="col-lg-4 d-none d-lg-block">
             <img class="rounded-circle shadow-1-strong mb-4"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp" alt="avatar"
+              src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Sai Gholap</h5>
-            <p>Photographer</p>
+            <p>Web Developer</p>
             <p class="text-muted">
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               praesentium voluptatum deleniti atque corrupti.
@@ -181,10 +181,10 @@
           </div>
           <div class="col-lg-4 d-none d-lg-block">
             <img class="rounded-circle shadow-1-strong mb-4"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp" alt="avatar"
+              src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Harshwardhan K</h5>
-            <p>Photographer</p>
+            <p>Web Developer</p>
             <p class="text-muted">
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               praesentium voluptatum deleniti atque corrupti.
@@ -193,10 +193,10 @@
           </div>
           <div class="col-lg-4 d-none d-lg-block">
             <img class="rounded-circle shadow-1-strong mb-4"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp" alt="avatar"
+              src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"></h5>
-            <p>Photographer</p>
+            <p>Web Developer</p>
             <p class="text-muted">
               
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
