--- a/views/landpg.ejs
+++ b/views/landpg.ejs
@@ -134,7 +134,7 @@
               src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Ojas Bhalerao</h5>
-            <p>UX Designer</p>
+            <p>Web Developer</p>
             <p class="text-muted">
                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id
               officiis hic tenetur quae quaerat ad velit ab hic tenetur.
@@ -147,7 +147,7 @@
               src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Srushti Nalawade</h5>
-            <p>Web Developer</p>
+            <p>UI/UX designer</p>
             <p class="text-muted">
                            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
               suscipit laboriosam, nisi ut aliquid commodi.
@@ -160,7 +160,7 @@
               src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Mohit Warke</h5>
-            <p>Web Developer</p>
+            <p>Documentaton</p>
             <p class="text-muted">
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               praesentium voluptatum deleniti atque corrupti.
@@ -172,7 +172,7 @@
               src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Sai Gholap</h5>
-            <p>Web Developer</p>
+            <p>Documentaton</p>
             <p class="text-muted">
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               praesentium voluptatum deleniti atque corrupti.
@@ -184,7 +184,7 @@
               src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"><i class="bi bi-patch-check-fill"></i> Harshwardhan K</h5>
-            <p>Web Developer</p>
+            <p>Documentaton</p>
             <p class="text-muted">
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               praesentium voluptatum deleniti atque corrupti.
@@ -196,7 +196,7 @@
               src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png" alt="avatar"
               style="width: 150px;" />
             <h5 class="mb-3"></h5>
-            <p>Web Developer</p>
+            <p>Documentaton</p>
             <p class="text-muted">
               
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
